# FinAgent-Evo

./: .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
.trae/documents/: finagent_300_tasks_experiments_todo_plan.md  finagent_future_experiments_and_paper_plan.md  finagent_missing_experiments_todo_plan.md  neurips_paper_improvement_plan.md  neurips_review_finagent_evo.md
benchmarks/: complex_tasks_real_api.json  finagent_real_api_eval.json  finagent_real_api_results.json  finagent_real_api_results_merged.json
benchmarks/finben/: 100.json  samples.json
docs/: experiment_results.md  proposal.md
docs/project/: SUMMARY.md  progress.md
neurips_paper/: main.tex  references.bib
paper/docs/: case_study_T01_T12.md  evaluation_plan.md  experiment_results.md  neurips_2026_simulated_review.md  proposal.md  summary_fullscale_n20.json  summary_neurips_v5_reduced.json  summary_real_api.json
paper/main/: Makefile  README.md  appendix_rigor.md  check_data.py  checklist.tex  main.tex  main.txt  neurips_2024.sty  neurips_review_main_pdf.md  references.bib
paper/research/: papers.json
paper/supplementary/: README.md
src/: agent.py  package.json  run.py  server.py  server.ts
src/core/: evolution.py  lean_prompts.py  memory.py  prompts.py  qveris_tools.py  skill.py
src/data/: QQQ_1y_ohlcv.csv  XLF_1y_ohlcv.csv  XLU_1y_ohlcv.csv
ui/: package-lock.json  package.json
(+643 files in other folders)
